@@ -80,24 +80,26 @@ class Scanner {
       case '}': addToken(RIGHT_BRACE); break;
       case ',': addToken(COMMA); break;
       case '.': addToken(DOT); break;
-      case '-': addToken(MINUS); break;
-      case '+': addToken(PLUS); break;
+      case '-': addToken(match('=') ? MINUS_EQUAL : MINUS); break;
+      case '+': addToken(match('=') ? PLUS_EQUAL : PLUS); break;
       case ';': addToken(SEMICOLON); break;
-      case '*': addToken(STAR); break; 
+      case '*': addToken(match('=') ? STAR_EQUAL : STAR); break; 
 
       case '!': addToken(match('=') ? BANG_EQUAL : BANG); break;
       case '=': addToken(match('=') ? EQUAL_EQUAL : EQUAL); break;
       case '<': addToken(match('=') ? LESS_EQUAL : LESS); break;
       case '>': addToken(match('=') ? GREATER_EQUAL : GREATER); break;
-
+      
+      // adding: SLASH_EQUAL and MODULO, MODULO_EQUAL
       case '/':
         if (match('/')) {
           // A comment goes until the end of the line.                
           while (peek() != '\n' && !isAtEnd()) advance();
         } else {
-          addToken(SLASH);
+          addToken(match('=') ? SLASH_EQUAL : SLASH);
         }
         break;
+      case '%': addToken(match('=') ? MODULO_EQUAL : MODULO); break;
 
       case ' ':
       case '\r':
