@@ -10,6 +10,10 @@ enum TokenType {
   EQUAL, EQUAL_EQUAL,
   GREATER, GREATER_EQUAL,
   LESS, LESS_EQUAL,
+  PLUS_EQUAL, MINUS_EQUAL, 
+  STAR_EQUAL, SLASH_EQUAL, 
+  MODULO, MODULO_EQUAL,
+  QUESTION, COLON, 
 
   // Literals.                                     
   IDENTIFIER, STRING, NUMBER,
